force-app/main/default/objects/CWS_Bypass_Settings__c/CWS_Bypass_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to bypass Workflow Rules, Validation Rules, Process Builder Flows, Triggers etc.</description>
    <label>Bypass Settings</label>
</CustomObject>