force-app/main/default/objects/CWS_Bypass_Settings__c/fields/CWS_Bypass_Objects__c.field-meta.xml
<CustomField>
    <fullName>CWS_Bypass_Objects__c</fullName>
    <description>The names of the meta data are captured here.</description>
    <inlineHelpText>Full API names followed by &apos;;&apos; including the managed package prefix if applicable of objects you need to bypass WF rules, Validation Rules, Process Builders. If you need to bypass multiple objects, concatenate one after another. Eg: Account;Contact;</inlineHelpText>
    <label>Bypass Objects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>