force-app/main/default/objects/CWS_Bypass_Settings__c/fields/CWS_Process_Builder_Disabled__c.field-meta.xml
<CustomField>
    <fullName>CWS_Process_Builder_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if you would like to disable process builder processes for the objects in the Bypass Objects field.</inlineHelpText>
    <label>Process Builder Disabled</label>
    <type>Checkbox</type>
</CustomField>