force-app/main/default/objects/CWS_Bypass_Settings__c/fields/CWS_Workflow_Rules_Disabled__c.field-meta.xml
<CustomField>
    <fullName>CWS_Workflow_Rules_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if you would like to disable workflow rules for the objects in the Bypass Objects field.</inlineHelpText>
    <label>Workflow Rules Disabled</label>
    <type>Checkbox</type>
</CustomField>